# dissent

./: .travis.yml  README.md  default.nix  dissent.cabal  shell.nix
bench/: Crypto.hs
contrib/bench/: crypto.html
src/: Dissent.hs
src/Dissent/: Crypto.hs  Network.hs  Quorum.hs  Types.hs
src/Dissent/Crypto/: Random.hs  Rsa.hs
src/Dissent/Internal/: Debug.hs  Util.hs
src/Dissent/Network/: Quorum.hs  Socket.hs
src/Dissent/Protocol/: Shuffle.hs
src/Dissent/Protocol/Shuffle/: Leader.hs  Slave.hs
src/Dissent/Types/: Configuration.hs  Connection.hs  Peer.hs  Quorum.hs  Remote.hs  Self.hs
test/: HPC.hs
test/Dissent/: NetworkSpec.hs  QuorumSpec.hs  Util.hs
test/Dissent/Crypto/: RandomSpec.hs  RsaSpec.hs
test/Dissent/Network/: QuorumSpec.hs
test/Dissent/Protocol/: ShuffleSpec.hs
