name: dissent
category: Network
version: 0.0.1
description: Implementation of the Dissent accountable group anonymity protocol

license: MIT
license-file: LICENSE
copyright: (c) 2014 Leon Mergen
author: Leon Mergen
maintainer: leon@solatis.com
stability: experimental
synopsis: Accountable group anonymity protocol
build-type: Simple
data-files: LICENSE, README.md
cabal-version: >= 1.18
tested-with: GHC == 7.8.3

flag debug
  description: Enable debug support
  default:     True

flag test
  description: Enable test build (which exports all modules)
  default:     False

flag threaded
  description: Build with threaded runtime
  default:     True

flag eventlog
  description: Enable the eventlog, useful for profiling
  default:     False

library
  hs-source-dirs:      src
  ghc-options:         -Wall -ferror-spans
  default-language:    Haskell2010

  if impl(ghc >= 6.13.0)
    ghc-options: -rtsopts

  if flag(threaded)
    ghc-options: -threaded

  if flag(eventlog)
    ghc-options: -eventlog

  if flag(debug)
    cpp-options: -DDEBUG

  -- We always expose our main 'Dissent' module, which re-exports submodules
  exposed-modules:     Dissent

  -- This is a bit of a hack, but since our test suite is a separate executable,
  -- and we might want to test some hidden functions/modules, we allow the user
  -- to provide a -flag test to cabal configure to either enable or disable a
  -- full export of all testable modules.
  if flag(test)
    exposed-modules:   Dissent.Quorum,
                       Dissent.Network,
                       Dissent.Crypto,
                       Dissent.Crypto.Rsa,
                       Dissent.Types
  else
    other-modules:     Dissent.Quorum,
                       Dissent.Network,
                       Dissent.Crypto,
                       Dissent.Crypto.Rsa,
                       Dissent.Types

  -- And the modules below are never exported.
  other-modules:       Dissent.Internal.Debug

  build-depends:       base,
                       errors,
                       bytestring,

                       HsOpenSSL,
                       network,
                       network-simple,
                       vector

test-suite dissent-test
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall -threaded -auto-all -caf-all
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base,
                       bytestring,
                       hspec,

                       dissent,
                       network,
                       network-simple,
                       vector

source-repository head
  type: git
  location: git://github.com/solatis/dissent.git
  branch: master
