name: dissent
category: Network
version: 0.0.1
description: Implementation of the Dissent accountable group anonymity protocol

license: MIT
license-file: LICENSE
copyright: (c) 2014 Leon Mergen
author: Leon Mergen
maintainer: leon@solatis.com
stability: experimental
synopsis: Accountable group anonymity protocol
build-type: Simple
data-files: LICENSE, README.md
cabal-version: >= 1.18
tested-with: GHC == 7.8.3

flag debug
  description: Enable debug support
  default:     True

flag test
  description: Enable test build (which exports all modules)
  default:     False

flag threaded
  description: Build with threaded runtime
  default:     True

flag eventlog
  description: Enable the eventlog, useful for profiling
  default:     False

library
  hs-source-dirs:      src
  ghc-options:         -Wall -ferror-spans
  default-language:    Haskell2010

  if impl(ghc >= 6.13.0)
    ghc-options: -rtsopts

  if flag(threaded)
    ghc-options: -threaded

  if flag(eventlog)
    ghc-options: -eventlog

  if flag(debug)
    cpp-options: -DDEBUG

  exposed-modules:     Dissent,
                       Dissent.Quorum,
                       Dissent.Network.Socket,
                       Dissent.Network.Quorum,

                       Dissent.Crypto.Rsa,

                       Dissent.Protocol.Shuffle,
                       Dissent.Protocol.Shuffle.Leader,
                       Dissent.Protocol.Shuffle.Slave,
                       Dissent.Types,

                       Dissent.Internal.Debug,
                       Dissent.Internal.Util

  build-depends:       base,
                       errors,
                       either,
                       bytestring,                       
                       binary,

                       HsOpenSSL == 0.11,
                       crypto-api,
                       network,
                       async,
                       resourcet,
                       transformers,
                       transformers-compat,
                       mmorph,
                       lifted-base,
                       vector

test-suite dissent-test
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall -ferror-spans -threaded -auto-all -caf-all
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base,
                       bytestring,
                       hspec,
                       QuickCheck,
                       random,

                       dissent,
                       network,
                       async,
                       resourcet,
                       transformers,
                       transformers-compat,
                       either,
                       mmorph,
                       lifted-base,
                       vector

benchmark dissent-benchmark-crypto
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall -ferror-spans -threaded -auto-all -caf-all
  default-language:    Haskell2010
  hs-source-dirs:      bench
  main-is:             Crypto.hs
  build-depends:       base,
                       bytestring,
                       dissent,

                       criterion

source-repository head
  type: git
  location: git://github.com/solatis/dissent.git
  branch: master
